--- a/midnight-classic.css
+++ b/midnight-classic.css
@@ -2,12 +2,12 @@
 .theme-dark {
 	--brand-experiment: hsl(220, 60%, 60%);
 
-	--header-primary: hsl(220, 15%, 60%);
-	--header-secondary: hsl(220, 15%, 40%);
+	--header-primary: hsla(112, 51%, 80%, 1);
+	--header-secondary: hsla(112, 16%, 46%, 1);
 	--text-normal: var(--header-primary);
 	--text-muted: hsl(220, 15%, 20%);
-	--text-link: hsl(197, 100%, 47.8%);
-	--text-link-low-saturation: /* hsl(197, 100%, 52.9%) */ var(--text-link);
+	--text-link: hsla(149, 32%, 62%, 1);
+	--text-link-low-saturation: /* hsla(149, 32%, 57%, 1) */ var(--text-link);
 	--text-positive: hsl(139, 66.8%, 58.6%);
 	--text-warning: hsl(38, 95.7%, 54.1%);
 	--text-danger: hsl(359, 82.6%, 59.4%);
@@ -16,12 +16,12 @@
 	--interactive-hover: var(--header-primary);
 	--interactive-active: var(--header-primary);
 	--interactive-muted: var(--text-muted);
-	--background-primary: hsl(220, 15%, 10%);
-	--background-secondary: hsl(220, 15%, 11%);
-	--background-secondary-alt: hsl(220, 15%, 11%);
-	--background-tertiary: hsl(220, 15%, 12%);
-	--background-accent: hsl(220, 15%, 18%);
-	--background-floating: hsl(220, 15%, 8%);
+	--background-primary: hsla(149, 15%, 18%, 1);
+	--background-secondary: hsla(149, 15%, 22%, 1);
+	--background-secondary-alt: hsla(149, 15%, 24%, 1);
+	--background-tertiary: hsla(149, 12%, 18%, 1);
+	--background-accent: hsla(149, 15%, 25%, 1);
+	--background-floating: hsla(149, 15%, 13%, 1);
 	--background-mobile-primary: var(--background-primary);
 	--background-mobile-secondary: var(--background-secondary);
 	--background-modifier-hover: hsla(220, 15%, 20%, 0.1);
