--- a/midnight-classic.css
+++ b/midnight-classic.css
@@ -34,7 +34,7 @@
 	--info-help-background: hsla(117, 100%, 47.8%, 0.1);
 	--info-help-foreground: hsl(117, 59%, 47.8%);
 	--info-help-text: hsl(0, 0%, 100%);
-	--status-warning-text: hsl(0, 0%, 0%);
+	--status-warning-text: hsl(117, 5%, 19%);
 	--scrollbar-thin-thumb: hsl(117, 15%, 23%);
 	--scrollbar-thin-track: transparent;
 	--scrollbar-auto-thumb: hsl(117, 15%, 19%);
@@ -62,7 +62,7 @@
 	);
 	--background-message-hover: var(--background-modifier-hover);
 	--channels-default: var(--header-secondary);
-	--guild-header-text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+	--guild-header-text-shadow: 0 1px 1px hsl(117, 5%, 5%);
 	--channeltextarea-background: var(--background-tertiary);
 	--activity-card-background: var(--background-tertiary);
 	--textbox-markdown-syntax: var(--header-secondary);
@@ -209,15 +209,15 @@
 }
 
 .withFrame-haYltI .winButtonClose-1HsbF-::after {
-	background-color: hsl(0, 50%, 50%) !important;
+	background-color: hsl(0, 45%, 50%) !important;
 }
 
 .withFrame-haYltI .winButtonMinMax-PBQ2gm:nth-child(3)::after {
-	background-color: hsl(120, 50%, 50%) !important;
+	background-color: hsl(120, 35%, 50%) !important;
 }
 
 .withFrame-haYltI .winButtonMinMax-PBQ2gm:nth-child(4)::after {
-	background-color: hsl(50, 50%, 50%) !important;
+	background-color: hsl(48, 45%, 50%) !important;
 }
 
 .typeWindows-1za-n7 > div:hover::after {
