--- a/therightone.css
+++ b/therightone.css
@@ -774,48 +774,12 @@ button.fullRegionButton_f1ceac /* fix vc button again */ {
     background-color: var(--idle-indicator) !important;
 }
 
-/* custom dm button moon icon */
-.childWrapper__6e9f8 > svg:not(.favoriteIcon_c9fddf) {
-    display: var(--discord-icon);
-}
-.childWrapper__6e9f8:has(> svg:not(.favoriteIcon_c9fddf))::before {
-    content: '';
-    display: var(--moon-icon);
-    position: absolute;
-    width: 65%;
-    height: 65%;
-    background: var(--text-4);
-    -webkit-mask-image: var(--moon-icon-url);
-    -webkit-mask-size: var(--moon-icon-size);
-    -webkit-mask-repeat: none;
-}
-.wrapper__6e9f8:hover .childWrapper__6e9f8::before {
-    /* prettier-ignore */
-    transition: background-color 0.15s ease-out, transform var(--moon-spin-transition);
-    transform: rotate(0deg) scale(1);
-}
-.wrapper__6e9f8:hover > .childWrapper__6e9f8::before,
-.wrapper__6e9f8.selected__6e9f8 > .childWrapper__6e9f8::before {
-    background: var(--text-0);
-    transform: rotate(-360deg) scale(0.8);
-}
-.lowerBadge_cc5dd2::before {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    transform: translate(-4px, -4px);
-    z-index: -1;
-    background: var(--bg-3);
-    border-radius: 50%;
-}
 /* custom dm button background instead of icon */
-/* .childWrapper__6e9f8:has(> svg:not(.favoriteIcon_c9fddf)) {
-	background: url('https://raw.githubusercontent.com/catppuccin/catppuccin/main/assets/logos/exports/1544x1544_circle.png');
+ .childWrapper__6e9f8:has(> svg:not(.favoriteIcon_c9fddf)) {
+	background: url('https://www.svgrepo.com/show/300554/torii.svg');
 	background-color: transparent !important;
 	background-size: cover;
-} */
+} 
 
 /* vencord spotify player support */
 #vc-spotify-player {
